# CmakeVMHelp

./: .vcpkg-configuration.json  CMakeLists.txt  Config.cpp  Config.h  README.md  Track.cpp  Track.h  VMExecute.h  cp.bat  gdt.cpp  gdt.h  main.hpp  pch.h  plugin.cpp  plugin.h  vcpkg.json
.VCPKG_OVERLAYS/unicorn/: portfile.cmake
ntdll/: ntdll.h  ntstatus.h
src/: CommandHandlers.cpp  CommandHandlers.h  Engine.cpp  Engine.h  GUI.cpp  GUI.h  Track.cpp  Track.h  _plugin_entry.cpp  _plugin_entry.h  gdt.cpp  pch.h  plugin.cpp  plugin.h
src/utils/: CodeTraceLogger.cpp  CodeTraceLogger.h  Dbg.cpp  Dbg.h  StructDef.h  Uc.cpp  Uc.h
